--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# BASICS FOR GO - GOLANG - GOPHER!
+ BASICS FOR GO - GOLANG - GOPHER!
 
 The main.go file holds all the basic code with comments. (Sorry if it's a little hard to read).
 
